syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.steem.grpc";
option java_outer_classname = "SteemProto";

package steem;

service Steem {
    rpc Login (LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
    string account_name = 1;
    string password = 2;
}

message LoginResponse {
    bool succeeded = 1;
}